--- a/styles/base.css
+++ b/styles/base.css
@@ -8,7 +8,7 @@
   outline: 0;
 }
 
-:focus-visible {
+:where(:focus-visible) {
   outline: 4px dashed black;
   outline-offset: 1px;
 }
@@ -34,6 +34,14 @@ a[target="_blank"] svg {
   margin-left: 0.25rem;
 }
 
+a {
+  text-underline-offset: 4px;
+
+  &:hover {
+    text-decoration: none;
+  }
+}
+
 ul {
   @media screen {
     &.list {
@@ -49,14 +57,6 @@ ul {
   }
 }
 
-a {
-  text-underline-offset: 4px;
-
-  &:hover {
-    text-decoration: none;
-  }
-}
-
 svg {
   @media print {
     display: none;
@@ -69,6 +69,10 @@ summary {
     line-height: 1;
     font: inherit;
   }
+}
+
+abbr[title] {
+  text-underline-offset: 4px;
 }
 
 .visually-hidden {
@@ -90,15 +94,22 @@ summary {
 }
 
 :root {
-  font: 20px system-ui, sans-serif;
+  font-family: system-ui, sans-serif;
 
   @media screen {
-    min-height: 100%;
+    height: 100%;
+    display: flex;
+    place-items: stretch;
     font: -apple-system-body;
-    --safe-area-left: max(env(safe-area-inset-left, 0px), 1rem);
-    --safe-area-right: max(env(safe-area-inset-right, 0px), 1rem);
+    --safe-area-left: 0px;
+    --safe-area-right: 0px;
+    --safe-area-left: env(safe-area-inset-left, 0px);
+    --safe-area-right: env(safe-area-inset-right, 0px);
     --header-background-color: #252525;
     --page-background-color: white;
+    --header-height: calc(2rem + (1.25 * 1rem));
+    --sidebar-width: 16rem;
+    --sidebar-width: max(16rem, calc(2rem + 30rch));
   }
 
   @media (max-width: 320px) {
@@ -112,600 +123,27 @@ body {
   @media screen {
     margin: 0;
     background-color: var(--page-background-color);
-    min-height: 100%;
+    flex: 1 0 100%;
+    display: flex;
+    place-items: stretch;
+    height: 100%;
     overflow-y: scroll;
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
     -webkit-text-size-adjust: 100%;
     -webkit-tap-highlight-color: transparent;
   }
-
-  @media screen and (max-width: calc(48rem - 1px)) {
-    display: grid;
-    row-gap: 1rem;
-    grid-template-columns: var(--safe-area-left) 1fr var(--safe-area-right);
-  }
-
-  @media screen and (min-width: 48rem) {
-    display: grid;
-    grid-template-columns: var(--safe-area-left) 15rem 1fr var(
-        --safe-area-right
-      );
-    grid-template-rows: 100vh 1fr;
-    grid-template-rows: 100dvh 1fr;
-    column-gap: 1rem;
-  }
-
-  @media screen and (min-width: 72rem) {
-    column-gap: 0;
-    grid-template-columns:
-      1fr var(--safe-area-left) 1rem 15rem 1rem 37rem 1rem var(
-        --safe-area-right
-      )
-      1fr;
-  }
 }
 
 .container {
-  @media screen and (max-width: calc(48rem - 1px)) {
-    display: grid;
-    grid-template-columns: subgrid;
-    grid-column: 1 / -1;
-    row-gap: 1rem;
-    grid-auto-flow: column;
-
-    body:has(.menu-button[aria-expanded="true"]) & {
-      grid-template-rows: auto auto 1fr 0;
-    }
-  }
-
-  @media screen and (min-width: 48rem) {
-    display: grid;
-    grid-column: 1 / -1;
-    grid-row: 1 / 2;
-    grid-template-columns: subgrid;
-    grid-template-rows: auto 1fr 0;
-    height: 100%;
-    row-gap: 1rem;
-    position: sticky;
-    top: 0;
-    z-index: 1;
-    pointer-events: none;
-  }
-}
-
-.page-header {
-  @media screen {
-    grid-column: 1 / -1;
-    grid-row: 1 / 2;
-    display: flex;
-    background-color: var(--header-background-color);
-    place-content: center;
-    padding: 1rem;
-    padding-left: var(--safe-area-left);
-    padding-right: var(--safe-area-right);
-    pointer-events: auto;
-  }
-}
-
-menu-button {
-  display: contents;
-}
-
-.menu-button {
-  cursor: pointer;
-  display: flex;
-  place-content: center;
-  place-items: center;
-  gap: 0.75rem;
-  font: inherit;
-  font-size: 1.125rem;
-  line-height: 1;
-  padding: 0.125rem 0.5rem;
-  margin: 0;
-  border: 0;
-  height: 100%;
-  border: 2px solid;
-  border-radius: 0.5rem;
-  padding: 1rem;
-  overflow-wrap: normal;
-  max-width: min-content;
-  align-self: center;
-  justify-self: center;
-  background-color: white;
-  color: black;
-
-  @media screen and (max-width: 320px) {
-    flex-wrap: wrap;
-  }
-
-  @media screen and (max-width: calc(48rem - 1px)) {
-    grid-column: 2 / 3;
-  }
-
-  @media screen and (min-width: 48rem) {
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
-  }
-
-  @media print {
-    display: none;
-  }
-
-  &:hover {
-    background-color: var(--header-background-color);
-    color: white;
-  }
-
-  &[aria-expanded="true"] {
-    background-color: var(--header-background-color);
-    color: white;
-
-    &:hover {
-      background-color: white;
-      color: black;
-    }
-  }
-
-  &:not([aria-expanded="true"]) [data-show="on"] {
-    display: none;
-  }
-
-  &[aria-expanded="true"] [data-show="off"] {
-    display: none;
-  }
-
-  @media screen and (min-width: 48rem) {
-    display: none;
-  }
-}
-
-[data-icon="menu"] {
-  width: 1.25rem;
-}
-
-[data-icon="close"] {
-  width: 1.25rem;
-  transform: scale(1.75);
-}
-
-.page-heading {
-  @media screen {
-    margin: 0;
-    font-size: 0.9rem;
-    letter-spacing: 0.15rem;
-    text-transform: uppercase;
-    font-weight: bold;
-    text-align: center;
-    line-height: 1.5;
-    color: white;
-  }
-
-  &:focus-visible {
-    outline: 4px dashed white;
-  }
-}
-
-nav {
-  @media screen {
-    font-size: 0.9rem;
-  }
-
-  @media screen and (max-width: calc(48rem - 1px)) {
-    grid-column: 2 / 3;
-    grid-row: 3 / 4;
-    width: calc(100% + 10px);
-    left: -5px;
-    top: -5px;
-    position: relative;
-    max-height: calc(100% - 1rem);
-
-    body:has(.menu-button[aria-expanded="false"]) & {
-      display: none;
-    }
-  }
-
-  @media screen and (min-width: 48rem) {
-    height: calc(100% + 5px);
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
-    overflow: hidden;
-    margin: -5px;
-    width: calc(100% + 10px);
-    position: relative;
-    pointer-events: auto;
-
-    &:after {
-      content: "";
-      background-image: linear-gradient(
-        0deg,
-        var(--page-background-color) 0%,
-        transparent 1rem
-      );
-      z-index: 1;
-      position: absolute;
-      inset: 0;
-      pointer-events: none;
-    }
-  }
-
-  @media screen and (min-width: 72rem) {
-    grid-column: 4 / 5;
-  }
-
-  @media print {
-    display: none;
-  }
-}
-
-.nav__inner-container {
-  @media screen and (min-width: 48rem) {
-    width: calc(100% + var(--scrollbar-width, 1rem));
-    overflow-y: scroll;
-    height: calc(100% + 5px);
-  }
-}
-
-.nav__list {
-  @media screen {
-    display: grid;
-    row-gap: 1rem;
-  }
-
-  @media screen and (max-width: calc(48rem - 1px)) {
-    max-height: calc(100% - 5px);
-    margin: 5px 5px 0 5px;
-
-    body:has(.menu-button:not([aria-expanded="true"])) & {
-      display: none;
-    }
-  }
-
-  @media screen and (min-width: 48rem) {
-    margin: 5px;
-    padding-bottom: 1rem;
-  }
-}
-
-main {
-  @media screen and (max-width: calc(48rem - 1px)) {
-    grid-column: 1 / -1;
-    display: grid;
-    grid-template-columns: subgrid;
-    grid-template-rows: 1fr 0;
-    row-gap: 1rem;
-
-    body:has(.menu-button[aria-expanded="true"]) & {
-      display: none;
-    }
-  }
-
-  @media screen and (min-width: 48rem) {
-    grid-column: 1 / -1;
-    grid-row: 1 / -1;
-    display: grid;
-    grid-template-columns: subgrid;
-    grid-template-rows: auto 1fr 0;
-    row-gap: 1rem;
-  }
-
-  @media screen and (min-width: 72rem) {
-    grid-column: 6 / 7;
-  }
-
-  & .page-header {
-    @media screen and (max-width: calc(48rem - 1px)) {
-      display: none;
-    }
-
-    @media screen and (min-width: 48rem) {
-      visibility: hidden;
-    }
-
-    @media print {
-      display: none;
-    }
-  }
-}
-
-body:has(.content),
-.nav__list-item {
-  --base-saturation: 100%;
-  --lightest-color-lightness: 95%;
-  --lighter-color-lightness: 90;
-  --light-color-lightness: 85%;
-  --medium-color-lightness: 33.3%;
-  --dark-color-lightness: 15%;
-  --darker-color-lightness: 10%;
-  --darkest-color-lightness: 5%;
-  --lightest-color: hsl(
-    var(--base-hue),
-    var(--base-saturation),
-    var(--lightest-color-lightness)
-  );
-  --lighter-color: hsl(
-    var(--base-hue),
-    var(--base-saturation),
-    var(--lighter-color-lightness)
-  );
-  --light-color: hsl(
-    var(--base-hue),
-    var(--base-saturation),
-    var(--light-color-lightness)
-  );
-  --medium-color: hsl(
-    var(--base-hue),
-    var(--base-saturation),
-    var(--medium-color-lightness)
-  );
-  --dark-color: hsl(
-    var(--base-hue),
-    var(--base-saturation),
-    var(--dark-color-lightness)
-  );
-  --darker-color: hsl(
-    var(--base-hue),
-    var(--base-saturation),
-    var(--darker-color-lightness)
-  );
-  --darkest-color: hsl(
-    var(--base-hue),
-    var(--base-saturation),
-    var(--darkest-color-lightness)
-  );
-}
-
-.nav__list-item {
-  @media screen {
-    display: block;
-    border-radius: 0.5rem;
-
-    &:has(.nav__list-item__details:not([open])) {
-      border: 2px solid var(--medium-color);
-      color: var(--darkest-color);
-      background-color: var(--lightest-color);
-    }
-
-    &:has(.nav__list-item__details[open]) {
-      border: 2px solid var(--medium-color);
-      color: var(--darkest-color);
-      background-color: var(--lightest-color);
-    }
-
-    &:has(.nav__list-item__summary:hover):has(
-        .nav__list-item__details:not([open])
-      ) {
-      color: black;
-      border-color: var(--dark-color);
-      background-color: var(--dark-color);
-
-      & .nav__list-item__summary {
-        color: white;
-      }
-    }
-  }
-}
-
-.nav__list-item__summary {
-  @media screen {
-    padding: 1rem;
-    border-radius: 0.5rem;
-    font-weight: bold;
-  }
-}
-
-.nav__list-item__definition {
-  @media screen {
-    padding: 0 1rem 1rem;
-    font-size: 0.85rem;
-    margin: 0;
-  }
-}
-
-.nav__list-item__sublist {
-  @media screen {
-    display: grid;
-    row-gap: 0.75rem;
-    padding: 0 0.75rem 0.75rem;
-  }
-}
-
-.nav__list-item__sublist-item__link {
-  @media screen {
-    display: block;
-    padding: 0.75rem;
-    font-weight: bold;
-    border-radius: 0.5rem;
-    word-break: break-word;
-    color: var(--lighter-color);
-    background-color: var(--darker-color);
-    border: 2px solid var(--medium-color);
-    color: var(--darkest-color);
-    background-color: var(--page-background-color);
-
-    &:hover {
-      color: white;
-      background-color: var(--dark-color);
-      border-color: var(--dark-color);
-    }
-  }
-}
-
-.content {
-  @media screen {
-    line-height: 1.5;
-    border-radius: 0.5rem;
-    border: 2px solid var(--dark-color, black);
-    background-color: var(--page-background-color);
-  }
-
-  @media screen and (max-width: calc(48rem - 1px)) {
-    padding: 1rem;
-    grid-column: 2 / 3;
-  }
-
-  @media screen and (min-width: 48rem) {
-    grid-column: 3 / 4;
-    grid-row: 2 / 3;
-    padding: 2rem;
-  }
-
-  @media screen and (min-width: 72rem) {
-    grid-column: 6 / 7;
-  }
-}
-
-.content:has(#overview) {
-  @media screen {
-    &:has(h1:focus-visible) {
-      outline: 4px dashed;
-      outline-offset: 1px;
-    }
-
-    & h1:focus-visible {
-      outline: 0;
-    }
-  }
-}
-
-.content__header {
-  @media screen {
-    display: flex;
-    margin-bottom: 1rem;
-
-    &:has(.content__close-button) {
-      flex-direction: row-reverse;
-      gap: 1rem;
-
-      @media screen and (max-width: 320px) {
-        flex-wrap: wrap;
-      }
-    }
-  }
-}
-
-.content__header__info {
-  flex: 1;
+  flex: 1 0 100%;
   display: grid;
-  place-items: flex-start;
-  column-gap: 0.5rem;
-  row-gap: 1rem;
-  margin-bottom: 0.5rem;
-  margin-top: 1rem;
-}
-
-.content__tags {
-  display: flex;
-  gap: 0.5rem;
-  flex-wrap: wrap;
-  margin: 0;
-}
-
-.content__tag {
-  @media screen {
-    padding: 0.25rem 0.5rem;
-    border-radius: 0.5rem;
-    font-weight: bold;
-    font-size: 0.8rem;
-    border: 2px solid var(--dark-color);
-    background-color: var(--dark-color);
-    color: white;
-
-    &:hover {
-      background-color: var(--lightest-color);
-      color: black;
-    }
-  }
-}
-
-.content__heading {
-  margin: 0;
-
-  @media screen {
-    font-weight: normal;
-    font-size: 2.25rem;
-    line-height: 1.25;
-
-    @media screen and (max-width: 320px) {
-      font-size: 1.75rem;
-    }
-  }
-}
-
-.content__heading__container {
-  display: flex;
-  flex-direction: column;
+  grid-template-rows: var(--header-height) auto auto;
   gap: 1rem;
-}
+  height: max-content;
 
-.content__links {
-  display: flex;
-  gap: 1rem;
-  flex-wrap: wrap;
-
-  @media print {
-    display: none;
+  @media screen and (min-width: 48rem) {
+    grid-template-columns: var(--sidebar-width) 1fr;
+    grid-template-rows: var(--header-height) auto;
   }
-}
-
-.content__close-button {
-  margin: 0;
-  padding: 0;
-  cursor: pointer;
-  font: inherit;
-  line-height: 1.75;
-  height: 1.75rem;
-  width: 1.75rem;
-  border-radius: 50%;
-  display: flex;
-  place-items: center;
-  place-content: center;
-  place-self: flex-start;
-  aspect-ratio: 1;
-  border: 2px solid var(--dark-color);
-  color: var(--lightest-color);
-  background-color: var(--dark-color);
-
-  &:hover {
-    background: none;
-    color: var(--dark-color);
-  }
-
-  & svg {
-    stroke: currentColor;
-    stroke-width: 2px;
-  }
-
-  @media print {
-    display: none;
-  }
-}
-
-.aria-role__subheading {
-  @media screen {
-    margin: 0;
-    font: inherit;
-    font-size: 0.9rem;
-    font-weight: bold;
-    line-height: inherit;
-    letter-spacing: 0.1rem;
-    text-transform: uppercase;
-    border-bottom: 1px solid var(--dark-color);
-  }
-}
-
-.aria-role__subheading + p {
-  margin: 0.5rem 0;
-}
-
-.aria-role__subheading:not(:first-of-type) {
-  margin-top: 2rem;
-}
-
-.tag-name {
-  hyphenate-character: "";
-}
-
-abbr[title] {
-  text-underline-offset: 4px;
 }
